@deploy/test/server.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-server-deployment
  namespace: test
  labels:
    app: test-server
spec:
  replicas: 4
  selector:
    matchLabels:
      app: test-server
  template:
    metadata:
      labels:
        app: test-server
    spec:
      containers:
      - name: test-server
        image: soso01dev/test-server:1.0.0
        ports:
        - containerPort: 3001
