@deploy/test/server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-server-service
  namespace: test
spec:
  selector:
    app: test-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
