@deploy/test/web.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-web-deployment
  namespace: test
  labels:
    app: test-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-web
  template:
    metadata:
      labels:
        app: test-web
    spec:
      containers:
      - name: test-web
        image: soso01dev/test-web:1.0.0
        ports:
        - containerPort: 3000
