@deploy/test/web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-web-service
  namespace: test
spec:
  type: NodePort
  selector:
    app: test-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30000
